--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li>Service</li>
                 <li>About</li>
                 <li>Contat</li>
+                <li>contact2</li>
             </ul>
         </nav>
         <section>Content</section>
